name:                TaPL
version:             0.1.0.0
synopsis:            Implementations of languages referred to in TaPL
description:         Implementations of languages referred to in Types and Programming Languages by Benjamin C. Pierce.
license:             MIT
license-file:        LICENSE
author:              Kyle Marek-Spartz
maintainer:          kyle.marek.spartz@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:     Language.TaPL.ShowPretty,
                       Language.TaPL.Boolean,
                       Language.TaPL.Boolean.Eval,
                       Language.TaPL.Boolean.Parser,
                       Language.TaPL.Boolean.Syntax,
                       Language.TaPL.Arith,
                       Language.TaPL.Arith.Eval,
                       Language.TaPL.Arith.Parser,
                       Language.TaPL.Arith.Syntax,
                       Language.TaPL.TypedBoolean,
                       Language.TaPL.TypedBoolean.Eval,
                       Language.TaPL.TypedBoolean.Parser,
                       Language.TaPL.TypedBoolean.Syntax,
                       Language.TaPL.TypedBoolean.Types,
                       Language.TaPL.TypedArith,
                       Language.TaPL.TypedArith.Eval,
                       Language.TaPL.TypedArith.Parser,
                       Language.TaPL.TypedArith.Syntax,
                       Language.TaPL.TypedArith.Types
  other-modules:       Language.TaPL.Boolean.Tests,
                       Language.TaPL.Arith.Tests,
                       Language.TaPL.TypedBoolean.Tests,
                       Language.TaPL.TypedArith.Tests
  build-depends:       base >=4.6 && <4.7, parsec >=3.1 && <3.2, QuickCheck >=2.6 && <2.7
  default-language:    Haskell2010
  hs-source-dirs:      src
